--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TechSupport_ScamperMobile">
         <activity
-            android:name=".newUserScreen"
+            android:name=".Screens.newUserScreen"
             android:exported="true" />
         <activity
-            android:name=".trackingScreen"
+            android:name=".Screens.trackingScreen"
             android:exported="true" />
         <activity
-            android:name=".cardioDisplayScreen"
+            android:name=".Screens.cardioDisplayScreen"
             android:exported="true" />
         <activity
-            android:name=".settings"
+            android:name=".Screens.settings"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
