--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="delware.apps.techsupport_scampermobile" >
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -27,7 +29,7 @@
         <activity android:name=".stickerWallScreen"
             android:exported="true"/>
         <activity
-            android:name=".Screens.trackingScreen"
+            android:name=".trackingScreen"
             android:exported="true" />
         <activity
             android:name=".cardioDisplayScreen"
