--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".stickerWallScreen"
             android:exported="true"/>
         <activity
-            android:name=".trackingScreen"
+            android:name=".Screens.trackingScreen"
             android:exported="true" />
         <activity
             android:name=".cardioDisplayScreen"
