--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:exported="true"
             android:label="@string/title_activity_maps" />
         <activity
+            android:name=".Tracking_Settings"
+            android:exported="true"/>
+        <activity
             android:name=".ShowSavedLocationsList"
             android:exported="true" />
         <activity
