--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
             android:name=".cardioDisplayScreen"
             android:exported="true" />
         <activity
+            android:name=".rivalScreen"
+            android:exported="true" />
+        <activity
             android:name=".settings"
             android:exported="true" />
         <activity
