--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="delware.apps.techsupport_scampermobile" >
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -27,6 +29,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+<!--        <service-->
+<!--            android:name=""-->
+<!--            android:foregroundServiceType="location">-->
+<!--        &lt;!&ndash; Any inner elements would go here. &ndash;&gt;-->
+<!--    </service>-->
 
         <activity
             android:name=".MapsActivity"
