--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:name=".stickerWallScreen"
             android:exported="true" />
         <activity
-            android:name=".Screens.trackingScreen"
+            android:name=".Screens.TrackingScreen"
             android:exported="true" />
         <activity
             android:name=".cardioDisplayScreen"
