--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,8 +63,7 @@
             android:exported="true" />
         <activity
             android:name=".Screens.TrackingScreen"
-            android:exported="true" />
-        <activity
+            android:exported="true" />        <activity
             android:name=".cardioDisplayScreen"
             android:exported="true" />
         <activity
