--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
         <service android:name=".NavigationService"
             android:foregroundServiceType="location"
             android:exported="false"/>
-       <meta-data
-           android:name="com.google.android.geo.API_KEY"
-           android:value="${MAPS_API_KEY}" />
+<!--       <meta-data-->
+<!--           android:name="com.google.android.geo.API_KEY"-->
+<!--           android:value="${MAPS_API_KEY}" />-->
 
         <activity
             android:name=".MapsActivity"
