--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="delware.apps.techsupport_scampermobile" >
+    package="delware.apps.techsupport_scampermobile">
 
+    <!-- Include required permissions for Google Mobile Ads to run. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".LocationList"
@@ -10,8 +15,27 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/scampericon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TechSupport_ScamperMobile" >
+        android:theme="@style/Theme.TechSupport_ScamperMobile">
 
+        <!--
+             You can find your app ID in the AdMob UI. For android:value,
+            insert your own AdMob app ID in quotes, as shown below.
+            Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713
+        -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+
+        <activity
+            android:name=".test"
+            android:exported="true"
+            android:label="@string/title_activity_test" />
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:exported="false"
+            android:theme="@android:style/Theme.Translucent" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -23,12 +47,10 @@
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
-        <service android:name=".NavigationService"
-            android:foregroundServiceType="location"
-            android:exported="false"/>
-<!--       <meta-data-->
-<!--           android:name="com.google.android.geo.API_KEY"-->
-<!--           android:value="${MAPS_API_KEY}" />-->
+        <service
+            android:name=".NavigationService"
+            android:exported="false"
+            android:foregroundServiceType="location" />
 
         <activity
             android:name=".MapsActivity"
@@ -36,7 +58,7 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".Tracking_Settings"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ShowSavedLocationsList"
             android:exported="true" />
@@ -60,7 +82,8 @@
             android:exported="true" />
         <activity
             android:name=".Screens.trackingScreen"
-            android:exported="true" />        <activity
+            android:exported="true" />
+        <activity
             android:name=".cardioDisplayScreen"
             android:exported="true" />
         <activity
@@ -71,18 +94,13 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
-
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
